--- a/src/.env.example
+++ b/src/.env.example
@@ -1,3 +1,5 @@
 APP_NAME="mini-RAG"
 APP_VERSION="0.1"
-OPENAI_API_KEY="add here your own secret key"
+OPENAI_API_KEY="add you own secret key here"
+FILE_ALLOWED_TYPES=["text/plain", "application/pdf"]
+FILE_MAX_SIZE=10
